# hyprbrowser

./: .gitignore  BUILD_STATUS.md  Cargo.toml  FEATURES.md  IMPLEMENTATION_COMPLETE.md  INSTALL.md  QUICKSTART.md  README.md  REBUILD_NOTES.md  WEBVIEW_INTEGRATION.md  tauri.conf.json
examples/: hyprbrowser_mod_example.rs
src/: downloads.rs  main.rs  modules.rs  state.rs  updater.rs
