[package]
name = "hyprbrowser"
version = "1.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5" }

[dependencies]
tauri = { version = "1.5", features = ["window-all", "shell-open"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = "0.4"
dirs = "5.0"
anyhow = "1.0"
thiserror = "1.0"
regex = "1.10"
url = "2.5"
urlencoding = "2.1"
zip = "0.6"
evalexpr = "11.0"
once_cell = "1.19"
lazy_static = "1.4"
parking_lot = "0.12"
rusqlite = { version = "0.29", features = ["bundled"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.54", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
[[bin]]
name = "hyprbrowser"
path = "src/main.rs"
